--- a/love.html
+++ b/love.html
@@ -68,7 +68,7 @@
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
             </div>
-            <audio src="src/love.mp3" autoplay="autoplay"></audio>
+            <audio src="src/loveJJ.mid" autoplay="autoplay"></audio>
         </div>
     
     <script>
