--- a/love.html
+++ b/love.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div id="clock-box">
-                    <a href="#" target="_blank">@陈独秀</a> 与 <a href="#" target="_blank">@雷晶晶</a> 在一起的
+                    <a href="#" target="_blank">@张帝</a> 与 <a href="#" target="_blank">@雷晶晶</a> 在一起的
                         <div id="clock"></div>
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
