--- a/loveLS.html
+++ b/loveLS.html
@@ -38,7 +38,7 @@
             <div id="wrap">
                <div id="text">
                     <div id="code">                 
-                    <span class="say">亲爱的Lisa，我爱你，么么哒，我会牵着你的手，走到满头白发的那一天，</span><br>
+                    <span class="say">亲爱的Lisa，我爱你，我会牵着你的手，走到满头白发的那一天，</span><br>
                     <span class="say">我会守护你生命里的精彩，并陪伴你一路精彩下去。</span><br>
                     <span class="say">你的幸福快乐，是我一生的追求。</span><br>
                     <span class="say">我会每一天带着笑脸，和你说早安，</span><br>
@@ -68,7 +68,7 @@
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
             </div>
-            <audio src="src/love.mp3" autoplay="autoplay"></audio>
+            <audio src="src/loveJJ.mp3" autoplay="autoplay"></audio>
         </div>
     
     <script>
